test/bad/check/Occurence.hs
module Occurence where

occurence x = x x
